[fix] Revert "[fix] css fix. covers were overlapping"
This was fixing the behavior for cover-1, but breaks it when several cover-3 follows.
Better keep it as it was before, waiting for a better solution.

This reverts commit 13e9d369c10c0b0811764cf7c9b56ff4c0bd4666.

--- a/prosopopee/static/css/style.css
+++ b/prosopopee/static/css/style.css
@@ -21,6 +21,7 @@ a {
 .galleries-line {
     width: 100%;
     height: 100%;
+    margin-bottom: -4px; /* YOLO */
 }
 
 .covers-1 .gallery-square {
